# HumanPoseEstimation

./: .gitignore  main.py  pyproject.toml
VST-pose/: Eval_PiW3D.py  Plot_Results.py  Train_PiW3D.py  utils.py
VST-pose/Feeder/: person_in_wifi3d.py
VST-pose/Model/PiW3D/: conv_STFormer_PiW3D.py
VST-pose/Model/Speed/: conv_STFormer_Speed.py
VST-pose/config/: config_piw3d.yaml
VST-pose/logs/PiW3D_Training/: events.out.tfevents.1778152422.pixel1.ihpc.uts.edu.au.2182619.0  events.out.tfevents.1778153003.pixel1.ihpc.uts.edu.au.2192222.0  events.out.tfevents.1778153648.pixel1.ihpc.uts.edu.au.2203046.0  events.out.tfevents.1778155192.pixel1.ihpc.uts.edu.au.2228441.0  events.out.tfevents.1778203873.pixel1.ihpc.uts.edu.au.3065168.0  events.out.tfevents.1778221365.pixel1.ihpc.uts.edu.au.3636881.0  events.out.tfevents.1778222294.pixel1.ihpc.uts.edu.au.3689111.0
VST-pose/pose_weights/person-in-wifi-3d/: metrics_per_epoch.csv  metrics_per_epoch.txt  result_summary.txt  test_results.txt
logs/PiW3D_Training/: events.out.tfevents.1778142259.SamruddhaDinde.12164.0  events.out.tfevents.1778143384.SamruddhaDinde.34756.0  events.out.tfevents.1778143433.SamruddhaDinde.9252.0  events.out.tfevents.1778143577.SamruddhaDinde.33536.0
